# Backup-Cloud-Folder

./: .gitignore  .gitlab-ci.yml  CODEOWNERS  README.md  pyproject.toml
backup_cloud_folder/: __init__.py  main.py
backup_cloud_folder/logic/: copy_cloud_folder.py
lrz_sync_and_share_scripts/: main.py
lrz_sync_and_share_scripts/logic/: copy_lrz_sync_and_share.py
lrz_sync_and_share_scripts/utils/: hash_file.py
